setup basics eg environment
Signed-off-by: Silvan Strübi <silvan.struebi@mgb.ch>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "reAttach": false,
       "reloadOnChange": {
-        "watch": ["${workspaceFolder}/src/**/*.js", "${workspaceFolder}/**/*.html"],
+        "watch": ["${workspaceFolder}/src/**/*.js", "${workspaceFolder}/src/**/*.html"],
         "ignore": "**/node_modules/**"
       },
       "internalConsoleOptions": "openOnSessionStart",
