--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Exemplary real world application built with Vanilla JS Web Components in an Event Driven Architecture",
   "main": "./src/index.html",
   "scripts": {
-    "test": "standard --fix"
+    "fix": "standard --fix"
   },
   "author": "weedshaker@gmail.com",
   "license": "MIT",
