Implement sign in and settings pages

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prettier": "^1.19.1",
     "ramda": "^0.26.1",
     "redux": "^4.0.4",
+    "tagged-union": "^1.1.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
