fixed local debugging
Signed-off-by: Silvan Strübi <silvan.struebi@mgb.ch>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
       },
       "internalConsoleOptions": "openOnSessionStart",
       "firefoxArgs": ["-devtools"],
-      "url": "${workspaceFolder}/index.html",
+      "url": "${workspaceFolder}/src/index.html",
       "webRoot": "${workspaceFolder}/src"
     },
     {
