--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 #
 
 org.gradle.parallel=true
-org.gradle.jvmargs=-Xmx3g -XX:MaxPermSize=2048m -XX:MaxMetaspaceSize=512m
+kotlin.code.style=official
 
 gradleScripts=https://raw.githubusercontent.com/hexagonkt/hexagon/1.2.20/gradle
 
