added markdown for article body
Signed-off-by: Silvan Strübi <silvan.struebi@mgb.ch>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
-    "favorited"
+    "favorited",
+    "markdownit"
   ],
   "editor.tabSize": 2,
   "editor.detectIndentation": false
