Upgrade bs-platform to 8.0

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -34,8 +34,7 @@
     "bs-dom-testing-library",
     "bs-jest-dom",
     "bs-jest-fetch-mock",
-    "bs-react-testing-library",
-    "bs-webapi"
+    "bs-react-testing-library"
   ],
   "refmt": 3,
   "warnings": {
