feat(conduit): Added ngxs, header and footer

--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
       "schematics": {},
       "root": "apps/conduit",
       "sourceRoot": "apps/conduit/src",
-      "prefix": "realworld-angular-nx-ngxs",
+      "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
