--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "^10.0.0",
     "@angular/language-service": "^10.0.0",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-angular": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
     "@nrwl/cypress": "10.0.7",
     "@nrwl/jest": "10.0.7",
     "@nrwl/workspace": "10.0.7",
@@ -56,8 +59,10 @@
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
+    "husky": "^4.2.5",
     "jest": "25.2.3",
     "jest-preset-angular": "8.1.2",
+    "lint-staged": "^10.2.11",
     "prettier": "2.0.4",
     "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
