--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,13 @@
 {
-  "singleQuote": true
+  "printWidth": 120,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "htmlWhitespaceSensitivity": "css",
+  "jsxBracketSameLine": true,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "proseWrap": "always"
 }
