--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "update": "ng update @nrwl/workspace",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "deploy": "ng deploy --base-href=/realworld-angular-nx-ngxs/"
   },
   "private": true,
   "dependencies": {
@@ -55,6 +56,7 @@
     "@nrwl/workspace": "10.0.7",
     "@types/jest": "25.1.4",
     "@types/node": "~8.9.4",
+    "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "~5.0.1",
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
