ci: add token for deploy

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -25,4 +25,6 @@ jobs:
       - run: yarn format:check
       - run: yarn test
       - run: yarn deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
