--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -6,25 +6,32 @@ jobs:
     runs-on: ubuntu-latest
     name: Build, Test and Deploy
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node.js 10.x
+        uses: actions/setup-node@v1
         with:
           node-version: '10.x'
-      - name: Get yarn cache directory path
+      - name: Set yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v1
+      - name: Get yarn cache
+        uses: actions/cache@v1
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      - run: yarn install
-      - run: yarn lint
-      - run: yarn format:check
-      - run: yarn test
-      - run: yarn deploy
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
+      - name: Install
+        run: yarn install
+      - name: Lint
+        run: yarn lint
+      - name: Format
+        run: yarn format:check
+      - name: Test
+        run: yarn test
+      - name: Build and Deploy        
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn deploy
