--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "deploy": "ng deploy --base-href=/realworld-angular-nx-ngxs/"
+    "deploy": "ng deploy --base-href=/realworld-angular-nx-ngxs/ --name=NGXS --email=ngxs@github.com"
   },
   "private": true,
   "dependencies": {
