--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Test
         run: yarn test
       - name: Build and Deploy
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: yarn deploy
