chore(home): generate home library

--- a/nx.json
+++ b/nx.json
@@ -28,6 +28,9 @@
     "conduit-e2e": {
       "tags": [],
       "implicitDependencies": ["conduit"]
+    },
+    "home": {
+      "tags": []
     }
   }
 }
