chore: update prefix | selector

--- a/angular.json
+++ b/angular.json
@@ -122,7 +122,7 @@
       "projectType": "library",
       "root": "libs/home",
       "sourceRoot": "libs/home/src",
-      "prefix": "realworld-angular-nx-ngxs",
+      "prefix": "conduit",
       "architect": {
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
