--- a/src/app/actions/.eslintrc
+++ b/src/app/actions/.eslintrc
@@ -1,6 +1,7 @@
 {
   "rules": {
     "functional/no-expression-statement": "off",
-    "functional/no-conditional-statement": "off"
+    "functional/no-conditional-statement": "off",
+    "functional/no-try-statement": "off"
   }
 }
