feat(conduit-api): Added a data-access library and a service for api calls

--- a/angular.json
+++ b/angular.json
@@ -142,6 +142,29 @@
         }
       },
       "schematics": {}
+    },
+    "data-access": {
+      "root": "libs/data-access",
+      "sourceRoot": "libs/data-access/src",
+      "projectType": "library",
+      "schematics": {},
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["libs/data-access/tsconfig.lib.json", "libs/data-access/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**", "!libs/data-access/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/data-access/jest.config.js",
+            "tsConfig": "libs/data-access/tsconfig.spec.json",
+            "passWithNoTests": true
+          }
+        }
+      }
     }
   },
   "cli": {
