--- a/rebar.config
+++ b/rebar.config
@@ -10,9 +10,11 @@
     {apps, [conduit]}
 ]}.
 
-
 {project_plugins, [rebar_gleam]}.
 
 {deps, [
-    {gleam_stdlib, "0.11.0"}
+    {gleam_stdlib, "~> 0.11"},
+    {gleam_http, "~> 1.1"},
+    {gleam_elli, "~> 0.1"},
+    {elli, "~> 3.3"}
 ]}.
