--- a/rebar.config
+++ b/rebar.config
@@ -16,5 +16,6 @@
     {gleam_stdlib, "~> 0.11"},
     {gleam_http, "~> 1.1"},
     {gleam_elli, "~> 0.1"},
-    {elli, "~> 3.3"}
+    {elli, "~> 3.3"},
+    {gleam_json, "~> 0.1"}
 ]}.
