add pgo and gleam_pgo

--- a/rebar.config
+++ b/rebar.config
@@ -5,10 +5,7 @@
     {test, [{src_dirs, ["src", "test", "gen/src", "gen/test"]}]}
 ]}.
 
-{shell, [
-    % {config, "config/sys.config"},
-    {apps, [conduit]}
-]}.
+{shell, [{apps, [conduit]}]}.
 
 {project_plugins, [rebar_gleam]}.
 
@@ -17,5 +14,6 @@
     {gleam_http, "~> 1.1"},
     {gleam_elli, "~> 0.1"},
     {elli, "~> 3.3"},
-    {gleam_json, "~> 0.1"}
+    {gleam_json, "~> 0.1"},
+    {gleam_pgo, "~> 0.1"}
 ]}.
