feat(auth): create login / sign-up libs

--- a/angular.json
+++ b/angular.json
@@ -165,6 +165,64 @@
           }
         }
       }
+    },
+    "login": {
+      "projectType": "library",
+      "root": "libs/login",
+      "sourceRoot": "libs/login/src",
+      "prefix": "realworld-angular-nx-ngxs",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["libs/login/tsconfig.lib.json", "libs/login/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**", "!libs/login/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/login/jest.config.js",
+            "tsConfig": "libs/login/tsconfig.spec.json",
+            "passWithNoTests": true,
+            "setupFile": "libs/login/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "style": "scss"
+        }
+      }
+    },
+    "register": {
+      "projectType": "library",
+      "root": "libs/register",
+      "sourceRoot": "libs/register/src",
+      "prefix": "realworld-angular-nx-ngxs",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["libs/register/tsconfig.lib.json", "libs/register/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**", "!libs/register/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/register/jest.config.js",
+            "tsConfig": "libs/register/tsconfig.spec.json",
+            "passWithNoTests": true,
+            "setupFile": "libs/register/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "style": "scss"
+        }
+      }
     }
   },
   "cli": {
