--- a/nx.json
+++ b/nx.json
@@ -34,6 +34,12 @@
     },
     "data-access": {
       "tags": []
+    },
+    "login": {
+      "tags": []
+    },
+    "register": {
+      "tags": []
     }
   }
 }
