--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,9 @@
     "baseUrl": ".",
     "paths": {
       "@realworld-angular-nx-ngxs/home": ["libs/home/src/index.ts"],
-      "@realworld-angular-nx-ngxs/data-access": ["libs/data-access/src/index.ts"]
+      "@realworld-angular-nx-ngxs/data-access": ["libs/data-access/src/index.ts"],
+      "@realworld-angular-nx-ngxs/login": ["libs/login/src/index.ts"],
+      "@realworld-angular-nx-ngxs/register": ["libs/register/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
