Add jose dependency for jwt
Current version doesn't compile cleanly with erlang 23 so a rebar
config override to del warnings_as_errors was needed

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,10 @@
 {erl_opts, [debug_info]}.
 {src_dirs, ["src", "gen/src"]}.
 
+{overrides, [
+    {del, jose, [{erl_opts, [warnings_as_errors]}]}
+]}.
+
 {profiles, [
     {test, [{src_dirs, ["src", "test", "gen/src", "gen/test"]}]}
 ]}.
@@ -15,5 +19,6 @@
     {gleam_elli, "~> 0.1"},
     {elli, "~> 3.3"},
     {gleam_json, "~> 0.1"},
-    {gleam_pgo, "~> 0.1"}
+    {gleam_pgo, "~> 0.1"},
+    {jose, "~> 1.10"}
 ]}.
