chore(deps): router-plugin, storage-plugin

--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@angular/platform-browser": "^10.0.0",
     "@angular/platform-browser-dynamic": "^10.0.0",
     "@angular/router": "^10.0.0",
+    "@ngxs/router-plugin": "^3.7.0",
+    "@ngxs/storage-plugin": "^3.7.0",
     "@ngxs/store": "^3.6.2",
     "@nrwl/angular": "10.0.7",
     "rxjs": "~6.5.5",
