--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "reason-react": "^0.9.1"
   },
   "devDependencies": {
-    "@glennsl/bs-jest": "^0.4.10",
+    "@glennsl/bs-jest": "^0.5.1",
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "bisect_ppx": "^2.4.1",
     "bs-bastet": "^1.2.5",
@@ -42,14 +42,14 @@
     "bs-fetch": "^0.6.2",
     "bs-jest-dom": "^4.1.1",
     "bs-jest-fetch-mock": "^2.0.0",
-    "bs-platform": "^8.2.0",
+    "bs-platform": "^8.3.0",
     "bs-react-testing-library": "^0.7.3",
     "bs-webapi": "^0.19.1",
     "concurrently": "^5.3.0",
     "coveralls": "^3.1.0",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^2.1.2",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^4.0.0-next.98",
     "relude": "^0.63.1"
   },
   "prettier": {
@@ -58,7 +58,8 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ],
     "ignorePatterns": [
       "src/**/*.bs.js"
