--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: node_js
 node_js:
-  - lts
-cache: 
-  npm: false
+  - lts/*
+cache: npm
 script:
-  - 'npm run test:ci'
-
+  - 'npm test'
 before_deploy:
   - 'npm run build'
 deploy:
@@ -13,7 +11,6 @@ deploy:
   provider: surge
   project: ./build/
   domain: reason-react-realworld-example-app.surge.sh
-
 jobs:
   include:
     - stage: Produce Coverage
