--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,10 +21,10 @@ jobs:
       - uses: actions/checkout@v2.0.0
       - uses: gleam-lang/setup-erlang@v1.1.0
         with:
-          otp-version: 22.1
-      - uses: gleam-lang/setup-gleam@v1.0.1
+          otp-version: 23.1.1
+      - uses: gleam-lang/setup-gleam@v1.0.2
         with:
-          gleam-version: 0.11.2
+          gleam-version: 0.12.0-rc3
       - run: rebar3 install_deps
       - run: rebar3 eunit
       - run: gleam format --check src test
