maybe install bash?

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,7 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v2.0.0
+      - run: apk add bash
       - uses: gleam-lang/setup-gleam@v1.0.2
         with:
           gleam-version: 0.12.0-rc3
