--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,8 @@
       "@realworld-angular-nx-ngxs/home": ["libs/home/src/index.ts"],
       "@realworld-angular-nx-ngxs/data-access": ["libs/data-access/src/index.ts"],
       "@realworld-angular-nx-ngxs/login": ["libs/login/src/index.ts"],
-      "@realworld-angular-nx-ngxs/register": ["libs/register/src/index.ts"]
+      "@realworld-angular-nx-ngxs/register": ["libs/register/src/index.ts"],
+      "@realworld-angular-nx-ngxs/settings": ["libs/settings/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
