Install @rescript/react and uninstall reason-react

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -25,16 +25,15 @@
     "bs-bastet",
     "bs-decode",
     "bs-fetch",
+    "@rescript/react",
     "bs-webapi",
-    "reason-react",
     "relude"
   ],
   "bs-dev-dependencies": [
     "@glennsl/bs-jest",
     "bs-dom-testing-library",
     "bs-jest-dom",
-    "bs-jest-fetch-mock",
-    "bs-react-testing-library"
+    "bs-jest-fetch-mock"
   ],
   "refmt": 3,
   "warnings": {
