Temporarily skip compilation for tests

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -8,8 +8,7 @@
     "subdirs": [
       { "dir": "page" },
       { "dir": "component" },
-      { "dir": "shared" },
-      { "dir": "__tests__", "type": "dev" }
+      { "dir": "shared" }
     ]
   },
   "bsc-flags": ["-bs-super-errors", "-bs-no-version-header"],
