Compile *.res to ESM, there is no index.css

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -14,7 +14,7 @@
   "bsc-flags": ["-bs-super-errors", "-bs-no-version-header"],
   "package-specs": [
     {
-      "module": "commonjs",
+      "module": "es6",
       "in-source": true
     }
   ],
