--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
-    "start": "ng serve",
+    "start": "ng serve --port=4251",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
