--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,6 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+/fiber-realworld
+/realworld.db
+/docs
+/tmp
+/tags
 
-# dependencies
-/node_modules
-/bower_components
-
-# IDEs and editors
-/.idea
-.project
-.classpath
-*.launch
-.settings/
-
-
-#System Files
-.DS_Store
-Thumbs.db
