Remove bs-bastet, bs-decode and relude

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -21,12 +21,9 @@
   "suffix": ".bs.js",
   "namespace": true,
   "bs-dependencies": [
-    "bs-bastet",
-    "bs-decode",
     "bs-fetch",
     "@rescript/react",
-    "bs-webapi",
-    "relude"
+    "bs-webapi"
   ],
   "bs-dev-dependencies": [
   ],
