Revert "Open Belt globally"
This reverts commit 06a9dcfebd4346a4f69141e06b3ca0b17c92853d.

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -5,9 +5,8 @@
   "suffix": ".bs.js",
   "reason": { "react-jsx": 3 },
   "bsc-flags": [
-    "-bs-no-version-header",
     "-bs-super-errors",
-    "-open Belt"
+    "-bs-no-version-header"
   ],
   "sources": {
     "dir": "src",
