Downgrade snowpack to 3.0

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "bs-webapi": "^0.19.1",
     "chai": "^4.3.4",
     "prettier": "^2.2.1",
-    "snowpack": "^3.3.7"
+    "snowpack": "~3.0"
   },
   "prettier": {
     "singleQuote": true,
